--- a/app/src/main/res/layout/transaction_details_bottom_sheet_dialogue.xml
+++ b/app/src/main/res/layout/transaction_details_bottom_sheet_dialogue.xml
@@ -8,6 +8,7 @@
     </data>
 
     <LinearLayout
+        android:background="?android:colorBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
