--- a/app/src/main/res/layout/transaction_item_layout.xml
+++ b/app/src/main/res/layout/transaction_item_layout.xml
@@ -50,7 +50,7 @@
             android:background="@drawable/transaction_type"
             android:layout_width="10dp"
             android:layout_height="10dp"
-            convert_tag="@{data._paid}"
+            convert_tag="@{data}"
             app:layout_constraintBottom_toTopOf="@+id/successful"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.9"
