--- a/app/src/main/res/layout/add_bank_bottom_sheet_dialogue.xml
+++ b/app/src/main/res/layout/add_bank_bottom_sheet_dialogue.xml
@@ -5,6 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable
+            name="data"
+            type="com.adashi.escrow.ui.addbank.AddBankViewModel" />
 
     </data>
 
@@ -78,7 +81,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/warning_info">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/transaction_title"
+                    android:id="@+id/bank_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLength="10"
@@ -104,13 +107,33 @@
                     android:fontFamily="@font/googlesans_regular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
-                <TextView
-                    android:id="@+id/transa_status"
-                    tools:text="Hello"
-                    android:textSize="15dp"
-                    android:fontFamily="@font/googlesans_medium"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+             <androidx.constraintlayout.widget.ConstraintLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content">
+                 <TextView
+                     android:id="@+id/account_name"
+                     tools:text="Hello"
+                     android:textSize="15dp"
+                     app:layout_constraintTop_toTopOf="parent"
+                     app:layout_constraintStart_toStartOf="parent"
+                     app:layout_constraintBottom_toBottomOf="parent"
+                     android:fontFamily="@font/googlesans_medium"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"/>
+                 <ProgressBar
+                     app:layout_constraintEnd_toEndOf="@+id/account_name"
+                     app:layout_constraintTop_toTopOf="@+id/account_name"
+                     app:layout_constraintStart_toStartOf="@+id/account_name"
+                     app:layout_constraintBottom_toBottomOf="@+id/account_name"
+                     android:id="@+id/progressBar"
+                     android:visibility="invisible"
+                     android:indeterminate="true"
+                     android:indeterminateTintMode="src_atop"
+                     android:indeterminateTint="@color/primaryColor"
+                     style="?android:attr/progressBarStyle"
+                     android:layout_width="30dp"
+                     android:layout_height="30dp" />
+             </androidx.constraintlayout.widget.ConstraintLayout>
             </LinearLayout>
 
             <Button
