--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <resources>
-    <color name="primaryColor">#006156</color>
-    <color name="primaryLightColor">#408f82</color>
+    <color name="primaryColor">#40196D</color>
+    <color name="primaryLightColor">#A889CB</color>
     <color name="primaryDarkColor">#00362d</color>
     <color name="secondaryColor">#ffeea7</color>
     <color name="secondaryLightColor">#ffffd9</color>
