--- a/app/src/main/res/layout/fragment_transactions.xml
+++ b/app/src/main/res/layout/fragment_transactions.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -13,45 +13,46 @@
         android:background="?android:colorBackground"
         tools:context=".ui.transactions.TransactionsFragment">
 
-
         <TextView
             android:id="@+id/head"
             style="@style/texts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_20_dp"
             android:fontFamily="@font/googlesans_medium"
             android:text="Transactions"
-            android:layout_marginTop="@dimen/margin_20_dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
             android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.facebook.shimmer.ShimmerFrameLayout
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/head"
             android:id="@+id/shimmer_view_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/head">
 
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
                     <androidx.cardview.widget.CardView
-                        android:layout_marginTop="15dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="10dp"
                         app:cardBackgroundColor="?android:attr/colorAccent"
                         app:cardCornerRadius="5dp"
                         app:cardElevation="5dp">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -77,24 +78,26 @@
                                     android:layout_marginBottom="10dp" />
 
                                 <androidx.cardview.widget.CardView
-                                    android:layout_marginRight="40dp"
                                     android:layout_width="match_parent"
-                                    android:layout_height="15dp" />
+                                    android:layout_height="15dp"
+                                    android:layout_marginRight="40dp" />
                             </LinearLayout>
 
 
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
+
                     <androidx.cardview.widget.CardView
-                        android:layout_marginTop="15dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="10dp"
                         app:cardBackgroundColor="?android:attr/colorAccent"
                         app:cardCornerRadius="5dp"
                         app:cardElevation="5dp">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -120,24 +123,26 @@
                                     android:layout_marginBottom="10dp" />
 
                                 <androidx.cardview.widget.CardView
-                                    android:layout_marginRight="40dp"
                                     android:layout_width="match_parent"
-                                    android:layout_height="15dp" />
+                                    android:layout_height="15dp"
+                                    android:layout_marginRight="40dp" />
                             </LinearLayout>
 
 
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
+
                     <androidx.cardview.widget.CardView
-                        android:layout_marginTop="15dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="10dp"
                         app:cardBackgroundColor="?android:attr/colorAccent"
                         app:cardCornerRadius="5dp"
                         app:cardElevation="5dp">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -163,24 +168,26 @@
                                     android:layout_marginBottom="10dp" />
 
                                 <androidx.cardview.widget.CardView
-                                    android:layout_marginRight="40dp"
                                     android:layout_width="match_parent"
-                                    android:layout_height="15dp" />
+                                    android:layout_height="15dp"
+                                    android:layout_marginRight="40dp" />
                             </LinearLayout>
 
 
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
+
                     <androidx.cardview.widget.CardView
-                        android:layout_marginTop="15dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="10dp"
                         app:cardBackgroundColor="?android:attr/colorAccent"
                         app:cardCornerRadius="5dp"
                         app:cardElevation="5dp">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -206,24 +213,26 @@
                                     android:layout_marginBottom="10dp" />
 
                                 <androidx.cardview.widget.CardView
-                                    android:layout_marginRight="40dp"
                                     android:layout_width="match_parent"
-                                    android:layout_height="15dp" />
+                                    android:layout_height="15dp"
+                                    android:layout_marginRight="40dp" />
                             </LinearLayout>
 
 
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
+
                     <androidx.cardview.widget.CardView
-                        android:layout_marginTop="15dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="10dp"
                         app:cardBackgroundColor="?android:attr/colorAccent"
                         app:cardCornerRadius="5dp"
                         app:cardElevation="5dp">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -249,24 +258,26 @@
                                     android:layout_marginBottom="10dp" />
 
                                 <androidx.cardview.widget.CardView
-                                    android:layout_marginRight="40dp"
                                     android:layout_width="match_parent"
-                                    android:layout_height="15dp" />
+                                    android:layout_height="15dp"
+                                    android:layout_marginRight="40dp" />
                             </LinearLayout>
 
 
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
+
                     <androidx.cardview.widget.CardView
-                        android:layout_marginTop="15dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="10dp"
                         app:cardBackgroundColor="?android:attr/colorAccent"
                         app:cardCornerRadius="5dp"
                         app:cardElevation="5dp">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -292,24 +303,26 @@
                                     android:layout_marginBottom="10dp" />
 
                                 <androidx.cardview.widget.CardView
-                                    android:layout_marginRight="40dp"
                                     android:layout_width="match_parent"
-                                    android:layout_height="15dp" />
+                                    android:layout_height="15dp"
+                                    android:layout_marginRight="40dp" />
                             </LinearLayout>
 
 
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
+
                     <androidx.cardview.widget.CardView
-                        android:layout_marginTop="15dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="10dp"
                         app:cardBackgroundColor="?android:attr/colorAccent"
                         app:cardCornerRadius="5dp"
                         app:cardElevation="5dp">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -335,24 +348,26 @@
                                     android:layout_marginBottom="10dp" />
 
                                 <androidx.cardview.widget.CardView
-                                    android:layout_marginRight="40dp"
                                     android:layout_width="match_parent"
-                                    android:layout_height="15dp" />
+                                    android:layout_height="15dp"
+                                    android:layout_marginRight="40dp" />
                             </LinearLayout>
 
 
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
+
                     <androidx.cardview.widget.CardView
-                        android:layout_marginTop="15dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="10dp"
                         app:cardBackgroundColor="?android:attr/colorAccent"
                         app:cardCornerRadius="5dp"
                         app:cardElevation="5dp">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -378,24 +393,26 @@
                                     android:layout_marginBottom="10dp" />
 
                                 <androidx.cardview.widget.CardView
-                                    android:layout_marginRight="40dp"
                                     android:layout_width="match_parent"
-                                    android:layout_height="15dp" />
+                                    android:layout_height="15dp"
+                                    android:layout_marginRight="40dp" />
                             </LinearLayout>
 
 
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
+
                     <androidx.cardview.widget.CardView
-                        android:layout_marginTop="15dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="10dp"
                         app:cardBackgroundColor="?android:attr/colorAccent"
                         app:cardCornerRadius="5dp"
                         app:cardElevation="5dp">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -421,24 +438,26 @@
                                     android:layout_marginBottom="10dp" />
 
                                 <androidx.cardview.widget.CardView
-                                    android:layout_marginRight="40dp"
                                     android:layout_width="match_parent"
-                                    android:layout_height="15dp" />
+                                    android:layout_height="15dp"
+                                    android:layout_marginRight="40dp" />
                             </LinearLayout>
 
 
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
+
                     <androidx.cardview.widget.CardView
-                        android:layout_marginTop="15dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="10dp"
                         app:cardBackgroundColor="?android:attr/colorAccent"
                         app:cardCornerRadius="5dp"
                         app:cardElevation="5dp">
+
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
@@ -464,9 +483,9 @@
                                     android:layout_marginBottom="10dp" />
 
                                 <androidx.cardview.widget.CardView
-                                    android:layout_marginRight="40dp"
                                     android:layout_width="match_parent"
-                                    android:layout_height="15dp" />
+                                    android:layout_height="15dp"
+                                    android:layout_marginRight="40dp" />
                             </LinearLayout>
 
 
