--- a/app/src/main/res/layout/bank_account_item_layout.xml
+++ b/app/src/main/res/layout/bank_account_item_layout.xml
@@ -4,58 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="data"
             type="com.adashi.escrow.models.addbank.Account" />
     </data>
 
     <LinearLayout
-        android:orientation="vertical"
-        android:background="@drawable/transaction_bg"
-        android:layout_marginEnd="@dimen/margin_10_dp"
-        android:layout_marginStart="@dimen/margin_10_dp"
-        android:padding="@dimen/margin_10_dp"
-        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_10_dp"
+        android:layout_marginEnd="@dimen/margin_10_dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/transaction_bg"
+        android:orientation="vertical"
+        android:padding="@dimen/margin_10_dp">
 
 
         <TextView
             android:id="@+id/date_and_time"
             android:layout_width="wrap_content"
-            android:fontFamily="@font/googlesans_regular"
             android:layout_height="wrap_content"
-            android:text="@{data.accountName}"
             android:layout_marginTop="10dp"
-            tools:text="Bank Name"
+            android:fontFamily="@font/googlesans_regular"
+            android:text="@{data.accountName}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/withdrawal"
-            app:layout_constraintTop_toBottomOf="@+id/withdrawal" />
+            app:layout_constraintTop_toBottomOf="@+id/withdrawal"
+            tools:text="Bank Name" />
 
         <TextView
             android:id="@+id/withdrawal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/googlesans_medium"
-            tools:text="0822442244"
             android:text="@{data.accountNumber}"
             app:layout_constraintBottom_toTopOf="@+id/date_and_time"
             app:layout_constraintEnd_toStartOf="@+id/ammount"
             app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="0822442244" />
 
         <TextView
             android:id="@+id/successful"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{data.bankName}"
             android:fontFamily="@font/googlesans_medium"
-            tools:text="Gt BANK"
+            android:text="@{data.bankName}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ammount" />
+            app:layout_constraintTop_toBottomOf="@+id/ammount"
+            tools:text="Gt BANK" />
 
     </LinearLayout>
 </layout>
