--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -1,10 +1,10 @@
-<TextView android:id="@+id/textView"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/textView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:colorBackground"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:text="Computing"
-    android:textSize="18sp"
-    android:padding="5dp"
     android:fontFamily="@font/googlesans_regular"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:padding="5dp"
+    android:textSize="18sp"
+    tools:text="Computing" />
