--- a/app/src/main/res/layout/fragment_withdrawal_banks.xml
+++ b/app/src/main/res/layout/fragment_withdrawal_banks.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="?android:colorBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?android:colorBackground"
         tools:context=".ui.settings.bankaccounts.WithdrawalBanksFragment">
 
         <TextView
@@ -29,12 +29,12 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_marginTop="@dimen/margin_20_dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@id/head"
             app:layout_constraintBottom_toTopOf="@id/add_bank"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"/>
+            app:layout_constraintTop_toBottomOf="@id/head" />
 
         <Button
             android:id="@+id/add_bank"
