sent code to database and retrieved code successfully 🤗 💃🏾

--- a/app/src/main/res/layout/fragment_withdrawal_banks.xml
+++ b/app/src/main/res/layout/fragment_withdrawal_banks.xml
@@ -49,5 +49,33 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <ProgressBar
+            android:visibility="invisible"
+            android:indeterminate="true"
+            android:indeterminateTintMode="src_atop"
+            android:indeterminateTint="@color/colorPrimary"
+            android:id="@+id/progressBar2"
+            android:backgroundTint="@color/primaryColor"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/progressTexxt"
+            android:visibility="invisible"
+            android:layout_width="wrap_content"
+            android:textSize="20sp"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/googlesans_medium"
+            android:layout_height="wrap_content"
+            android:text="Retreving Bank Details"
+            app:layout_constraintEnd_toEndOf="@+id/progressBar2"
+            app:layout_constraintStart_toStartOf="@+id/progressBar2"
+            app:layout_constraintTop_toBottomOf="@+id/progressBar2" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
