--- a/app/src/main/res/layout/fragment_withdrawal_banks.xml
+++ b/app/src/main/res/layout/fragment_withdrawal_banks.xml
@@ -77,5 +77,20 @@
             app:layout_constraintStart_toStartOf="@+id/progressBar2"
             app:layout_constraintTop_toBottomOf="@+id/progressBar2" />
 
+        <ProgressBar
+            android:id="@+id/recycler_view_progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/colorPrimary"
+            android:indeterminateTintMode="src_atop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.221" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
