Refactored code and fixed floating action button

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -592,7 +592,8 @@
             android:layout_height="wrap_content"
             android:background="?colorPrimary"
             android:clickable="true"
-            android:backgroundTint="@color/primaryColor"
+            app:tint="@color/white"
+            app:backgroundTint="@color/primaryColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.887"
