--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <resources>
-    <color name="primaryColor">#40196D</color>
-    <color name="primaryLightColor">#A889CB</color>
-    <color name="primaryDarkColor">#00362d</color>
+    <color name="primaryColor">#0F2965</color>
+    <color name="primaryLightColor">#1841A0</color>
+    <color name="primaryDarkColor">#0B1D47</color>
     <color name="secondaryColor">#ffeea7</color>
     <color name="secondaryLightColor">#ffffd9</color>
     <color name="secondaryDarkColor">#cbbc77</color>
