--- a/app/src/main/res/layout/fragment_verify_email.xml
+++ b/app/src/main/res/layout/fragment_verify_email.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
     </data>
 
-    <LinearLayout
-        android:gravity="center"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:gravity="center_horizontal"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,21 +16,37 @@
         tools:context=".ui.auth.VerifyEmailFragment">
 
         <TextView
+            android:id="@+id/title"
             style="@style/TextAppearance.AppCompat.Subhead"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/googlesans_bold"
             android:gravity="center"
+            android:text="Email Verification sent \nto your mail"
             android:textSize="25sp"
-            android:text="Email Verification sent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.173" />
+
         <TextView
+            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/description"
             android:gravity="center"
             android:fontFamily="@font/googlesans_medium"
             android:layout_marginTop="@dimen/margin_10_dp"
-            android:text="Kindly check your email for \nverification "
+            android:text="Kindly check your email for verification "
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <Button
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/description"
+            android:id="@+id/email_button"
             android:layout_marginTop="@dimen/margin_20_dp"
             style="@style/buttons"
             android:text="Open Email"
@@ -38,5 +55,5 @@
             android:layout_height="wrap_content"/>
 
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
