Integrated verify email endpoint ✅

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -90,7 +90,7 @@
                 android:layout_width="match_parent"
                 android:text="@={data.password}"
                 android:layout_height="wrap_content"
-                android:inputType="numberPassword"
+                android:inputType="textPassword"
                 android:padding="20dp"
                 android:fontFamily="@font/googlesans_regular"
                 android:singleLine="true" />
