--- a/app/src/main/res/drawable/rounded.xml
+++ b/app/src/main/res/drawable/rounded.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:topLeftRadius="20dp" android:topRightRadius="20dp"/>
-    <solid android:color="?attr/colorAccent"/>
+    <corners android:radius="10dp" />
+    <solid android:color="#DDDDDD"/>
 
 </shape>
