--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -67,6 +67,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/tit1">
 
                     <LinearLayout
+                        android:id="@+id/edit_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
@@ -90,6 +91,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/benefic_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
@@ -164,6 +166,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/change_pass_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
@@ -187,6 +190,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/change_pin_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
@@ -238,6 +242,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/tit3">
 
                     <LinearLayout
+                        android:id="@+id/help_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
@@ -261,6 +266,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/about_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="true"
