--- a/app/src/main/res/layout/bank_account_item_layout.xml
+++ b/app/src/main/res/layout/bank_account_item_layout.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:fontFamily="@font/googlesans_regular"
-            android:text="@{data.accountName}"
+            android:text="@{data.account_name}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/withdrawal"
             app:layout_constraintTop_toBottomOf="@+id/withdrawal"
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/googlesans_medium"
-            android:text="@{data.accountNumber}"
+            android:text="@{data.account_number}"
             app:layout_constraintBottom_toTopOf="@+id/date_and_time"
             app:layout_constraintEnd_toStartOf="@+id/ammount"
             app:layout_constraintHorizontal_bias="0.1"
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/googlesans_medium"
-            android:text="@{data.bankName}"
+            android:text="@{data.bank_name}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ammount"
