Fixed rebounding on fetching account name✅

--- a/app/src/main/res/layout/transaction_details_bottom_sheet_dialogue.xml
+++ b/app/src/main/res/layout/transaction_details_bottom_sheet_dialogue.xml
@@ -57,7 +57,7 @@
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     android:fontFamily="@font/googlesans_medium"
                     android:textSize="25dp"
-                    tools:text="buy car" />
+                    tools:text="Car" />
             </LinearLayout>
 
             <LinearLayout
