--- a/app/src/main/res/layout/add_bank_bottom_sheet_dialogue.xml
+++ b/app/src/main/res/layout/add_bank_bottom_sheet_dialogue.xml
@@ -66,7 +66,7 @@
             </LinearLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/transaction_title_field"
+                android:id="@+id/bank_number_field"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
