--- a/app/src/main/res/layout/add_bank_bottom_sheet_dialogue.xml
+++ b/app/src/main/res/layout/add_bank_bottom_sheet_dialogue.xml
@@ -112,7 +112,7 @@
                  android:layout_height="wrap_content">
                  <TextView
                      android:id="@+id/account_name"
-                     tools:text="Hello"
+                     tools:text="Enike Braimoh"
                      android:textSize="15dp"
                      app:layout_constraintTop_toTopOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
