--- a/app/src/main/res/layout/withdraw_dialogue_sheet.xml
+++ b/app/src/main/res/layout/withdraw_dialogue_sheet.xml
@@ -55,6 +55,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/amount"
+                android:maxLength="7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
